// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> UI Regression Base theme should render correctly danger variant 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 14px;
  padding: 0 10px;
  line-height: 36px;
  color: #fff;
  background: #ed6663;
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Danger
  </button>
</div>
`;

exports[`<Button /> UI Regression Base theme should render correctly large size 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 21px;
  padding: 0 30px;
  line-height: 54px;
  color: #fff;
  background: #1b262c;
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Large
  </button>
</div>
`;

exports[`<Button /> UI Regression Base theme should render correctly medium size 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 14px;
  padding: 0 10px;
  line-height: 36px;
  color: #fff;
  background: #1b262c;
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Medium
  </button>
</div>
`;

exports[`<Button /> UI Regression Base theme should render correctly primary variant 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 14px;
  padding: 0 10px;
  line-height: 36px;
  color: #fff;
  background: #1b262c;
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Primary
  </button>
</div>
`;

exports[`<Button /> UI Regression Base theme should render correctly secondary variant 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 14px;
  padding: 0 10px;
  line-height: 36px;
  color: #fff;
  background: #0f4c81;
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Secondary
  </button>
</div>
`;

exports[`<Button /> UI Regression Base theme should render correctly shadowed button 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 14px;
  padding: 0 10px;
  line-height: 36px;
  color: #fff;
  background: #1b262c;
  box-shadow: 0 5px 5px 0 rgba(0,0,0,0.25);
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Shadowed
  </button>
</div>
`;

exports[`<Button /> UI Regression Base theme should render correctly small size 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 11.200000000000001px;
  padding: 0 6px;
  line-height: 28.8px;
  color: #fff;
  background: #1b262c;
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Small
  </button>
</div>
`;

exports[`<Button /> UI Regression Fresha Mobile theme should render correctly danger variant 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 10px;
  padding: 0 4px;
  line-height: 24px;
  color: #fff;
  background: #ed6663;
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Danger
  </button>
</div>
`;

exports[`<Button /> UI Regression Fresha Mobile theme should render correctly large size 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 15px;
  padding: 0 8px;
  line-height: 36px;
  color: #fff;
  background: #85a392;
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Large
  </button>
</div>
`;

exports[`<Button /> UI Regression Fresha Mobile theme should render correctly medium size 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 10px;
  padding: 0 4px;
  line-height: 24px;
  color: #fff;
  background: #85a392;
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Medium
  </button>
</div>
`;

exports[`<Button /> UI Regression Fresha Mobile theme should render correctly primary variant 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 10px;
  padding: 0 4px;
  line-height: 24px;
  color: #fff;
  background: #85a392;
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Primary
  </button>
</div>
`;

exports[`<Button /> UI Regression Fresha Mobile theme should render correctly secondary variant 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 10px;
  padding: 0 4px;
  line-height: 24px;
  color: #fff;
  background: #f5b971;
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Secondary
  </button>
</div>
`;

exports[`<Button /> UI Regression Fresha Mobile theme should render correctly shadowed button 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 10px;
  padding: 0 4px;
  line-height: 24px;
  color: #fff;
  background: #85a392;
  box-shadow: 0 5px 5px 0 rgba(0,0,0,0.25);
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Shadowed
  </button>
</div>
`;

exports[`<Button /> UI Regression Fresha Mobile theme should render correctly small size 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 8px;
  padding: 0 2px;
  line-height: 19.200000000000003px;
  color: #fff;
  background: #85a392;
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Small
  </button>
</div>
`;

exports[`<Button /> UI Regression Fresha theme should render correctly danger variant 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 12px;
  padding: 0 16px;
  line-height: 28px;
  color: #fff;
  background: #ed6663;
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Danger
  </button>
</div>
`;

exports[`<Button /> UI Regression Fresha theme should render correctly large size 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 18px;
  padding: 0 32px;
  line-height: 42px;
  color: #fff;
  background: #85a392;
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Large
  </button>
</div>
`;

exports[`<Button /> UI Regression Fresha theme should render correctly medium size 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 12px;
  padding: 0 16px;
  line-height: 28px;
  color: #fff;
  background: #85a392;
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Medium
  </button>
</div>
`;

exports[`<Button /> UI Regression Fresha theme should render correctly primary variant 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 12px;
  padding: 0 16px;
  line-height: 28px;
  color: #fff;
  background: #85a392;
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Primary
  </button>
</div>
`;

exports[`<Button /> UI Regression Fresha theme should render correctly secondary variant 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 12px;
  padding: 0 16px;
  line-height: 28px;
  color: #fff;
  background: #f5b971;
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Secondary
  </button>
</div>
`;

exports[`<Button /> UI Regression Fresha theme should render correctly shadowed button 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 12px;
  padding: 0 16px;
  line-height: 28px;
  color: #fff;
  background: #85a392;
  box-shadow: 0 5px 5px 0 rgba(0,0,0,0.25);
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Shadowed
  </button>
</div>
`;

exports[`<Button /> UI Regression Fresha theme should render correctly small size 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 9.600000000000001px;
  padding: 0 8px;
  line-height: 22.400000000000002px;
  color: #fff;
  background: #85a392;
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Small
  </button>
</div>
`;

exports[`<Button /> UI Regression Partners theme should render correctly danger variant 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 16px;
  padding: 0 16px;
  line-height: 44px;
  color: #fff;
  background: #ed6663;
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Danger
  </button>
</div>
`;

exports[`<Button /> UI Regression Partners theme should render correctly large size 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 24px;
  padding: 0 48px;
  line-height: 66px;
  color: #fff;
  background: #654062;
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Large
  </button>
</div>
`;

exports[`<Button /> UI Regression Partners theme should render correctly medium size 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 16px;
  padding: 0 16px;
  line-height: 44px;
  color: #fff;
  background: #654062;
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Medium
  </button>
</div>
`;

exports[`<Button /> UI Regression Partners theme should render correctly primary variant 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 16px;
  padding: 0 16px;
  line-height: 44px;
  color: #fff;
  background: #654062;
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Primary
  </button>
</div>
`;

exports[`<Button /> UI Regression Partners theme should render correctly secondary variant 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 16px;
  padding: 0 16px;
  line-height: 44px;
  color: #fff;
  background: #ff9c71;
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Secondary
  </button>
</div>
`;

exports[`<Button /> UI Regression Partners theme should render correctly shadowed button 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 16px;
  padding: 0 16px;
  line-height: 44px;
  color: #fff;
  background: #654062;
  box-shadow: 0 5px 5px 0 rgba(0,0,0,0.25);
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Shadowed
  </button>
</div>
`;

exports[`<Button /> UI Regression Partners theme should render correctly small size 1`] = `
.c0 {
  margin: 0 0 20px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Muli,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  font-weight: 600;
  border: 0 none;
  border-radius: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 12.8px;
  padding: 0 9.6px;
  line-height: 35.2px;
  color: #fff;
  background: #654062;
}

.c0:hover {
  opacity: 0.7;
}

<div>
  <button
    class="c0"
  >
    Small
  </button>
</div>
`;
